# r3d-DoF

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile.in  README.md  ROADMAP.md  TODO
.github/: FUNDING.yml
.github/workflows/: cmake-multi-platform.yml
cmake/: EmbedShaders.cmake
embedded/shaders/: EmbedShaders.cmake
embedded/shaders/generate/: downsampling.fs.glsl
embedded/shaders/screen/: scene.fs.glsl
examples/: CMakeLists.txt  animation.c  basic.c  bloom.c  common.h  directional.c  dof.c  emission.c  fog.c  instanced.c  lights.c  particles.c  pbr.c  pbr_car.c  pbr_musket.c  resize.c  skybox.c  sponza.c  sprite.c  sprite_instanced.c  transparency.c
include/: r3d.h
scripts/: bin2c.py  glsl_minifier.py
shaders/generate/: downsampling.frag  upsampling.frag
shaders/raster/: depth.vert  depth_cube.vert  depth_cube_instanced.vert  depth_instanced.vert  forward.frag  forward.vert  forward_instanced.vert  geometry.frag  geometry.vert  geometry_instanced.vert  skybox.frag
shaders/screen/: adjustment.frag  ambient.frag  dof.frag  lighting.frag  output.frag  ssao.frag  ssr.frag  tonemap.frag
src/: r3d_core.c  r3d_culling.c  r3d_environment.c  r3d_lighting.c  r3d_model.c  r3d_particles.c  r3d_skybox.c  r3d_sprite.c  r3d_state.c  r3d_state.h  r3d_utils.c
src/details/: r3d_drawcall.c  r3d_drawcall.h  r3d_frustum.c  r3d_frustum.h  r3d_light.c  r3d_light.h  r3d_math.h  r3d_primitives.c  r3d_primitives.h  r3d_projection.c  r3d_projection.h  r3d_shaders.h  r3d_simd.h
src/details/profiling/: r3d_cpu_timer.c  r3d_cpu_timer.h  r3d_prof_min.c  r3d_prof_min.h
src/embedded/: r3d_shaders.c.in
